--- a/web/package.json
+++ b/web/package.json
@@ -8,15 +8,12 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "react": "^0.14.0"
-  },
   "devDependencies": {
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
+    "file-loader": "^0.8.4",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "webpack": "^1.12.2"
   }
 }
