--- a/web/package.json
+++ b/web/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "webpack --progress --colors --watch",
+    "serve": "./node_modules/.bin/webpack-dev-server --host 0.0.0.0 --port 3000  --inline --hot --color",
+    "build": "./node_modules/.bin/webpack --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1",
+    "file-loader": "^0.8.4",
+    "css-loader": "^0.21.0",
+    "style-loader": "^0.13.0",
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
-    "file-loader": "^0.8.4",
+    "react-hot-loader": "^1.3.0",
     "react": "^0.14.0",
-    "react-dom": "^0.14.0",
-    "webpack": "^1.12.2"
+    "react-dom": "^0.14.0"
   }
 }
